<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/CodeFont"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/activity_portfolio_title" />

    <Button
        android:id="@+id/activity_portfolio_spotify_button"
        style="@style/ButtonPortfolio"
        android:text="@string/activity_portfolio_spotify"/>

    <Button
        android:id="@+id/activity_portfolio_scores_button"
        style="@style/ButtonPortfolio"
        android:text="@string/activity_portfolio_scores"/>

    <Button
        android:id="@+id/activity_portfolio_library_button"
        style="@style/ButtonPortfolio"
        android:text="@string/activity_portfolio_library"/>

    <Button
        android:id="@+id/activity_portfolio_bigger_button"
        style="@style/ButtonPortfolio"
        android:text="@string/activity_portfolio_bigger"/>

    <Button
        android:id="@+id/activity_portfolio_XYZ_button"
        style="@style/ButtonPortfolio"
        android:text="@string/activity_portfolio_XYZ"/>

</LinearLayout>
